Fix overflow in 1920px or higher res. p10

--- a/css/style.css
+++ b/css/style.css
@@ -436,9 +436,6 @@ body {
     border: none;
     outline: none;
     width: 21rem;
-    height: 23.4rem;
-    -ms-overflow-style: none; /* ie & edge */
-    scrollbar-width: none; /* firefox */
     resize: none;
   }
 
